subdir('cocoa')
subdir('liblzma')
subdir('helpers')

### gtkwave

gtkwave_sources = [
    'ae2.c',
    'analyzer.c',
    'baseconvert.c',
    'bitvec.c',
    'bsearch.c',
    'busy.c',
    'clipping.c',
    'color.c',
    'currenttime.c',
    'debug.c',
    'discardbuttons.c',
    'edgebuttons.c',
    'entry.c',
    'extload.c',
    'fetchbuttons.c',
    'fgetdynamic.c',
    'file.c',
    'fonts.c',
    'fst.c',
    'gconf.c',
    'getopt1.c',
    'getopt.c',
    'ghw.c',
    'globals.c',
    'gnu_regex.c',
    'gtk23compat.c',
    'help.c',
    'hierpack.c',
    'hiersearch.c',
    'interp.c',
    'jrb.c',
    'libghw.c',
    'logfile.c',
    'lx2.c',
    'lxt.c',
    'main.c',
    'markerbox.c',
    'menu.c',
    'mouseover.c',
    'mouseover_sigs.c',
    'pagebuttons.c',
    'pipeio.c',
    'pixmaps.c',
    'print.c',
    'ptranslate.c',
    'rc.c',
    'regex.c',
    'renderopt.c',
    'rgb.c',
    'savefile.c',
    'search.c',
    'shiftbuttons.c',
    'showchange.c',
    'signal_list.c',
    'signalwindow.c',
    'simplereq.c',
    'splash.c',
    'status.c',
    'strace.c',
    'symbol.c',
    'tcl_commands.c',
    'tcl_helper.c',
    'tcl_np.c',
    'tcl_support_commands.c',
    'timeentry.c',
    'translate.c',
    'tree.c',
    'tree_component.c',
    'treesearch.c',
    'ttranslate.c',
    'vcd.c',
    'vcd_keywords.c',
    'vcd_partial.c',
    'vcd_recoder.c',
    'vcd_saver.c',
    'vlist.c',
    'vzt.c',
    'wavewindow.c',
    'zoombuttons.c',
]

executable(
    'gtkwave',
    gtkwave_sources,
    dependencies: [
        gtk_dep,
        bzip2_dep,
        libfst_dep,
        liblxt_dep,
        libvzt_dep,
        libgwlzma_dep,
        libm_dep,
        cocoa_dep,
        tcl_dep,
    ],
    include_directories: config_inc,
    install: true,
)

### twinwave

twinwave_sources = [
    'twinwave.c',
]

executable(
    'twinwave',
    twinwave_sources,
    dependencies: [
        gtk_dep,
    ],
    include_directories: config_inc,
    install: true,
)
