mime_files = [
    'x-gtkwave-extension-ae2.xml',
    'x-gtkwave-extension-aet.xml',
    'x-gtkwave-extension-evcd.xml',
    'x-gtkwave-extension-fst.xml',
    'x-gtkwave-extension-ghw.xml',
    'x-gtkwave-extension-gtkw.xml',
    'x-gtkwave-extension-lx2.xml',
    'x-gtkwave-extension-lxt2.xml',
    'x-gtkwave-extension-lxt.xml',
    'x-gtkwave-extension-vcd.xml',
    'x-gtkwave-extension-vzt.xml',
]

install_data(
    mime_files,
    install_dir: get_option('datadir') / 'mime/packages',
)
